# aythya

./: Cargo.toml  build.rs
src/: main.rs  main.slint  sameboy.rs
ui/: debugger.slint  main.slint
